HazelcastDataStorage Test